# de-challenge-gb

./: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/api/: main.py
src/api/routers/: admin.py  ingestion.py  metrics.py
src/config/: settings.py
src/connections/: create_views.py  database.py  init_db.py  s3_client.py
src/domain/: models.py  schemas.py
src/use_cases/: backup.py  dlq_manager.py  historical_migration.py  ingestion.py
tests/: test_integration.py  test_unit.py
