[project]
name = "data-challenge-gb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.42",
    "fastapi>=0.139.0",
    "fastavro>=1.12.2",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "s3fs>=0.4.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.50.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
